--- a/www/v4/css/main.css
+++ b/www/v4/css/main.css
@@ -41,21 +41,52 @@ ul {
   text-decoration : underline;
 }
 
-.fond{
-  background-color: rgba(203,208,211,0.6);
-  box-shadow: -2px 1px 4px 12px rgba(203,208,211,0.5);
-}
-
 #total{
+
   text-align: right;
+
 }
 
 #commander{
+
   position: absolute;
   margin-left: 280px;
+
 }
 
 #ImgPerso{
+
   max-height: 80px;
   max-width: 80px;
+
+
+}
+.fond{
+
+  
+  background-color: rgba(203,208,211,0.6);
+  box-shadow: -2px 1px 4px 12px rgba(203,208,211,0.5);
+
+  
+}
+
+.imgButton {
+  max-width : 45px;
+  max-height : 45px;
+  
+}
+
+.logoBar{
+
+  max-width : 100px;
+  max-height : 100px;  
+
+
+}
+
+
+.menu{
+
+  background-color: rgb(250,250,110);
+
 }
