--- a/www/v4/css/accueil.css
+++ b/www/v4/css/accueil.css
@@ -11,31 +11,31 @@ body {
 }
 
 
-.card-img-top {
+.image1 {
 	width: 100%;
     max-height: 350px;
 }
 
-.card-img-top2 {
+.image2 {
 	max-width: 80%;
     max-height: 80%;
 	
 }
 
-.carousel-indicators .active {
+.carroussel-indicateur .active {
     background-color: #2980b9;
 }
 
-.carousel-inner img {
+.interieur-carroussel{
     width: 100%;
     max-height: 460px
 }
 
-.carousel-control {
+.controle-carroussel {
     width: 0;
 }
 
-.carousel-control.left,
+.controle-caroussel.left,
 .carousel-control.right {
 	opacity: 1;
 	filter: alpha(opacity=100);
@@ -52,38 +52,12 @@ body {
 	padding: 15px;
 }
 
-.carousel-control .glyphicon-chevron-left, 
-.carousel-control .glyphicon-chevron-right, 
-.carousel-control .icon-prev, 
-.carousel-control .icon-next {
-	position: absolute;
-	top: 45%;
-	z-index: 5;
-	display: inline-block;
-}
-
-.carousel-control .glyphicon-chevron-left,
-.carousel-control .icon-prev {
-	left: 0;
-}
-
-.carousel-control .glyphicon-chevron-right,
-.carousel-control .icon-next {
-	right: 0;
-}
-
-.carousel-control.left span,
-.carousel-control.right span {
-	background-color: #000;
-}
-
 .carousel-control.left span:hover,
 .carousel-control.right span:hover {
 	opacity: .7;
 	filter: alpha(opacity=70);
 }
 
-/* Carousel Header Styles */
 .header-text {
     position: absolute;
     top: 20%;
