Dylan : MAJ Figurine.html panier.css et main.css
Uniformisation des CSS.
Ajout d'un modele d'article dans Figurines.html

--- a/www/v4/css/main.css
+++ b/www/v4/css/main.css
@@ -41,9 +41,6 @@ ul {
   text-decoration : underline;
 }
 
-
-
-
 .imgButton {
   max-width : 45px;
   max-height : 45px;
@@ -55,12 +52,17 @@ ul {
   max-width : 100px;
   max-height : 100px;  
 
-
 }
-
 
 .menu{
 
   background-color: rgb(250,250,110);
+
+}
+
+.fond{
+
+  background-color: rgba(203,208,211,0.2);
+  box-shadow: -2px 1px 4px 12px rgba(203,208,211,0.2);
 
 }
