--- a/www/v4/css/contact.css
+++ b/www/v4/css/contact.css
@@ -1,13 +1,11 @@
-.jumbotron {
+.barre {
 background: grey;
 color: #FFF;
 border-radius: 0px;
 }
-.jumbotron-sm { padding-top: 24px;
+.barre-sm { padding-top: 24px;
 padding-bottom: 24px; }
-.jumbotron small {
-color: #FFF;
-}
+
 .h1 small {
 font-size: 24px;
 }
