--- a/www/v4/css/index.css
+++ b/www/v4/css/index.css
@@ -14,7 +14,7 @@ body {
 
 
 .form-login {
-    background-color: #EDEDED;
+    background-color: rgb(254, 212, 73);
     padding-top: 10px;
     padding-bottom: 20px;
     padding-left: 20px;
@@ -23,6 +23,10 @@ body {
     border-color:#d2d2d2;
     border-width: 5px;
     box-shadow:0 1px 0 #cfcfcf;
+}
+
+.panel-default{
+    background-color: rgb(254, 212, 73);    
 }
 
 h4 { 
