--- a/www/v4/css/main.css
+++ b/www/v4/css/main.css
@@ -3,6 +3,15 @@ html {
   text-align      : justify;
 }
 
+body {
+  background-image: url("../images/background2.jpg");
+  background-size : 100%;
+  background-attachment : fixed;
+  background-position : center-center;
+  background-repeat : no-repeat;
+}
+
+
 ul {
   text-align      : left;
 }
@@ -56,7 +65,7 @@ ul {
 
 .menu{
 
-  background-color: rgb(250,250,110);
+  background-color: rgba(254,212,73,0.5);
 
 }
 
@@ -65,4 +74,33 @@ ul {
   background-color: rgba(203,208,211,0.2);
   box-shadow: -2px 1px 4px 12px rgba(203,208,211,0.2);
 
+}
+
+.panel-default{
+  border-radius: 20px;
+  background-color: rgba(254, 212, 73, 0.3);
+}
+
+.panel-default>.panel-heading{
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background-color: rgb(136,206,98);
+}
+
+.panel-title{
+  color: white;
+  font-weight: bolder;
+}
+
+.btn{
+  color: white;
+  font-weight: bold;
+  border-color: rgb(96, 143, 69);
+  background-color: rgb(136,206,98);
+}
+
+.btn-primary{
+  margin-left: 20px;
+  margin-bottom: 10px;
+  
 }
