--- a/www/v4/css/accueil.css
+++ b/www/v4/css/accueil.css
@@ -5,6 +5,11 @@ body {
   background-position : center-center;
   background-repeat : no-repeat;
 }
+
+.card-block {
+	padding-left : 15px;
+	padding-right : 15px;
+}
   
 .container {
     margin-top: 20px;
@@ -26,11 +31,11 @@ body {
 
 .interieur-carroussel{
     width: 100%;
-    max-height: 460px
+    max-height: 100%;
 }
 
 .controle-carroussel {
-    width: 0;
+    width: 100px;
 }
 
 .controle-caroussel.left,
@@ -95,5 +100,25 @@ body {
     color: #000;
     background-color: #fff;
     border-color: #fff;
+}
+
+
+.video-container {
+	position: relative;
+	padding-bottom: 45.25%;
+	margin-top : 73px;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+}
+
+.video-container iframe,  
+.video-container object,  
+.video-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
