JC - PHP, HTML, CSS, Photoshop
- Beaucoup de travail sur le code PHP, la mise à jour de données marche presque totalement (problème de session_start avec l'include pour le changement de Mdp

- gestion de l'erreur de connexion sur la page index.html

- Mise à jour de la page accueil.html (video responsive)

- mise à jour de la navbar sur les pages compte et accueil avec la deconnexion (reste à la copier/coller sur les autres dés qu'elle sera prête

- l'icone de deconnexion a été créée et le code php de deconnexion aussi

--- a/www/v4/css/accueil.css
+++ b/www/v4/css/accueil.css
@@ -114,7 +114,8 @@ body {
 
 .video-container iframe,  
 .video-container object,  
-.video-container embed {
+.video-container embed,
+.video-container video {
 	position: absolute;
 	top: 0;
 	left: 0;
