JC - connec bdd via admin en cours - ajout compteur articles en cours -

--- a/www/v4/css/main.css
+++ b/www/v4/css/main.css
@@ -92,15 +92,25 @@ ul {
 }
 
 .container{
-  margin-top: 150px;
+  margin-top: 130px;
 }
 
 .navbar{
   border-bottom: 3px solid rgb(35, 31, 32);
   border-top: 3px solid rgb(35, 31, 32);
 }
-/*
-.center{
-		margin-left: 300px;
+
+.countArticle{
+  position:relative;
+  z-index:1000;
+  color: red;
+  top: 22px;
+  right: 5px;
+  font-size: 1.2em;
+  font-weight: bold;
+  font-stretch: semi-condensed;
 }
-*/
+
+.navbar-default .navbar-toggle:focus {
+  background-color: rgba(0,0,0,0);
+}
