--- a/www/v4/css/main.css
+++ b/www/v4/css/main.css
@@ -18,8 +18,8 @@ ul {
 
 
 .imgButton2 {
-  max-width       : 100px;
-  max-height      : 100px;
+  max-width       : 100%;
+  max-height      : 70px;
 }
 
 /*.imgCV {
@@ -91,8 +91,8 @@ ul {
 
 }
 
-.container{
-  margin-top: 40px;
+.marginTopPage {
+  margin-top: 100px;
 }
 
 .navbar{
