Dylan : Création de la page Articles

--- a/www/v4/css/main.css
+++ b/www/v4/css/main.css
@@ -16,6 +16,10 @@ ul {
   text-align      : left;
 }
 
+.refColor {
+	color: grey;
+	font-size: 10px;
+}
 
 .imgButton2 {
   max-width       : 100%;
