Dylan : Finitions page produit

--- a/www/v4/css/produit.css
+++ b/www/v4/css/produit.css
@@ -4,5 +4,11 @@
 }
 
 .paddingArticle {
-  padding: 20px;
+  padding: 10px;
+}
+
+.paddingRef {
+  padding: 0px;
+  color: grey;
+  font-size: 10px;
 }
