Ken : ajout affichage des input number dans le css

--- a/www/v4/css/administration.css
+++ b/www/v4/css/administration.css
@@ -34,3 +34,19 @@
 			overflow: hidden;
 			border-radius: 15px;
 		}
+		
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button { 
+	-webkit-appearance: none;
+	margin:0;
+}
+
+input::-o-inner-spin-button,
+input::-o-outer-spin-button { 
+	-o-appearance: none;
+	margin:0
+}
