--- a/www/v4/css/index.css
+++ b/www/v4/css/index.css
@@ -60,3 +60,11 @@ h4 {
     color: white;
     text-align: center;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
